Issue #10811: Fix recursive usage of cursors. Instead of crashing, raise a ProgrammingError now.